Day end Commit sept 30

--- a/src/edu/nitrkl/graphics/components/messages.properties
+++ b/src/edu/nitrkl/graphics/components/messages.properties
@@ -1,3 +1,1 @@
-FlasherGroup.0=Input Collections size 
-FlasherGroup.1=\ doesn't match with size of flashFreqs 
-FlasherGroup.2=No supplied frequency shall exceed 1.0 to 40.0 limit.
+Launcher.DefaultSettingsFile=settings/new.json
